// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon render alipay icon. 1`] = `
<svg
  className="sc-bdVaJa eihmac"
  name="alipay"
>
  <use
    xlinkHref="#alipay"
  />
</svg>
`;

exports[`icon render wechat icon. 1`] = `
<svg
  className="sc-bdVaJa eihmac"
  name="wechat"
>
  <use
    xlinkHref="#wechat"
  />
</svg>
`;
